2006-01-24  Jim Meyering  <jim@meyering.net>

	* Version 6.0-cvs.

	* src/tail.c (tail_forever): Don't exit-nonzero when an attempt
	to put a regular file in O_NONBLOCK mode fails with EPERM.
	That happens on Linux when using tail -f on a file with the
	append-only attribute.  Reported by Dean Gaudet.  For details,
	see http://savannah.gnu.org/bugs/?func=detailitem&item_id=15473.
	* NEWS: Mention this fix.
	* tests/tail-2/append-only: New file.  Test for the above.
	* tests/tail-2/Makefile.am (TESTS): Add append-only.
	* tests/Makefile.am (check-root): Add tail-2/append-only

2006-01-21  Jim Meyering  <jim@meyering.net>

	* NEWS: Mention fts-related improvements and bug fixes.

2006-01-19  Jim Meyering  <jim@meyering.net>

	* tests/fmt/basic (pfx-1, pfx-2): New tests, to demonstrate the bug
	reported as http://bugs.debian.org/147577.  Forwarded by Thomas Hood.

2006-01-18  Jim Meyering  <jim@meyering.net>

	* tests/du/Makefile.am (TESTS): Add long-from-unreadable.

2006-01-17  Jim Meyering  <jim@meyering.net>

	Now that fts no longer changes the current working directory, adjust
	its clients accordingly -- note that du.c uses fts but doesn't need
	any adjustment, since it doesn't operate on the actual files,
	but rather just uses the stat buffers provided by fts.

	* src/chown-core.c: Include "openat.h".
	Don't include "lchown.h".
	(restricted_chown): Accept a new parameter, CWD_FD, and use it in
	calling openat, lchownat, chownat, rather than open, lchown, chown.
	Update caller.
	* src/chmod.c: Include "openat.h".
	(process_file): Use chmodat (fts->fts_cwd_fd,... in place of chmod (...

	* tests/du/long-from-unreadable: New test, to exercise one small
	corner of fts.c.

2006-01-13  Jim Meyering  <jim@meyering.net>

	* tests/Makefile.am (SUBDIRS): Add comments discouraging the
	addition of new directories under tests/.

	* tests/acl: Redirect stdin to /dev/null.  Otherwise, FreeBSD 5.0's
	getfacl would hang.

2006-01-12  Jim Meyering  <jim@meyering.net>
